--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,26 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
 <!-- <app-home></app-home> -->
+<div class="error_toaster">
+    <img src="../assets/imgs/close-circle-fill.svg">
+    <h5 id="errorMsg"></h5>
+    <button mat-icon-button class="btn_icon" (click)="close()">
+        <i class="ri-close-circle-line"></i>
+    </button>
+</div>
+
+<div class="warning_toaster">
+    <img src="../assets/imgs/error-warning-fill.svg">
+    <h5 id="warningMsg"></h5>
+    <button mat-icon-button class="btn_icon" (click)="close()">
+        <i class="ri-close-circle-line"></i>
+    </button>
+</div>
+
+<div class="success_toaster">
+    <img src="../assets/imgs/checkbox-circle-fill.svg">
+    <h5 id="successMsg"></h5>
+    <button mat-icon-button class="btn_icon" (click)="close()">
+        <i class="ri-close-circle-line"></i>
+    </button>
+</div>
