--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
+<app-footer></app-footer>
 <!-- <app-home></app-home> -->
 <div class="error_toaster">
     <img src="../assets/imgs/close-circle-fill.svg">
