--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,56 @@
-<p>home works!</p>
+<div class="homeBackgroung" style="background-image: url('../assets/imgs/home.jpeg');"></div>
+<div class="text">
+    <div class="content">
+    <h2>
+    Descover More with High Quality Products <i class="ri-star-smile-fill"></i>
+    </h2>
+    <p>
+        We provide everything you need in your life, making it easy for you to purchase from all your favorite brands from your phone with
+        <button [routerLink]="['/productsList']" routerLinkActive="active" mat-raised-button class="btn hereBtn">one click here</button>
+    </p>
+    </div>
+</div>
+<div class="row " style="padding: 50px 50px 20px;">
+    <p class="benefit">Benefits</p>
+    <div class="col-6 benefitService">
+        <h1>Benefits when using our services</h1>
+    </div>
+    <div class="col-6 benefitService">
+        <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam.</p>
+    </div>
+</div>
+<div class="row benefitCardService" >
+    <div class="col-3 benefitCard">
+        <div class="row">
+            <div class="col-2 icon">
+                <i class="ri-stack-fill"></i>
+            </div>
+            <h2>Many Choices</h2>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam.</p>
+        </div>
+    </div>
+    <div class="col-3 benefitCard">
+        <div class="row">
+            <div class="col-2 icon">
+                <i class="ri-calendar-todo-fill"></i>
+            </div>
+            <h2>Fast and On Time</h2>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam.</p>
+        </div>
+    </div>
+    <div class="col-3 benefitCard">
+        <div class="row">
+            <div class="col-2 icon">
+                <i class="ri-money-dollar-circle-fill"></i>
+            </div>
+            <h2>Affordable Price</h2>
+            <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam.</p>
+        </div>
+    </div>
+</div>
+<div class="row text-center benefitService" style="padding: 50px 50px 20px;">
+    <p class="benefit">Products</p>
+    <h1>Our Popular Products</h1>
+    <p>Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur aliquet quam.</p>
+
+</div>
