--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@ html, body { height: 100%; }
 body {  
     font-family: Roboto, "Helvetica Neue", sans-serif; 
     overflow-x: hidden;
-    background-color: #fff;
+    background-color: #f9f9f9;
 }
 .error_toaster_show {
     position: fixed;
@@ -282,4 +282,99 @@ body {
     padding: 0 13px !important;
     background-color: #fff;
     color: #6e6e6e;
+}
+
+.homeBackgroung {
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 500px;
+    filter: brightness(40%);
+    background-position: center center;
+}
+.text {
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translate(90%,-32%);
+    width: 50%;
+    padding: 50px;
+    background-color: #34485E;
+    color: white;
+    display: flex;
+    justify-content: flex-end;
+}
+.text p{
+    font-weight: lighter;
+}
+.hereBtn {
+    border-radius: 2rem !important;
+    color: #fff;
+    background-color: #aad0e9;
+    margin: 6px !important;
+
+}
+footer {
+    /* background-color: #30475e; */
+    background-color: #424a52;
+    color: #f9f9f9;
+    margin-top: 5px;
+}
+.location iframe {
+    padding: 20px;
+}
+.send label, .info em, .info a ,.info i{
+    color: #f9f9f9;
+    text-decoration-line: none !important;
+    font-size: larger !important;
+    font-weight: lighter !important;
+    padding: 10px !important;
+
+}
+#contact {
+    padding: 20px 50px 20px !important;
+}
+.follow_us i {
+    display: inline-block !important;
+    font-size: 30px !important;
+    margin-right: 10px !important;
+    color: #f9f9f9 !important;
+
+}
+.icon {
+    background-color: #f9f9f9;
+    border-radius: 50%;
+    width: 70px;
+    height: 70px;
+}
+.icon i{
+    font-size: xx-large;
+    display: inline-block;
+    margin: 26px 8px;
+    color: #F1C40E;
+}
+.benefitCardService{
+    padding: 20px 50px;
+    display: flex;
+    justify-content: space-around;
+}
+.benefit{
+    color: #F1C40E !important;
+    font-size: large !important;
+}
+.benefitService h1{
+    font-weight: revert;
+    font-size: 50px;
+}
+.benefitCard {
+    background-color: #fff;
+    padding: 20px;
+}
+.benefitCard h2{
+    font-size: x-large;
+    font-weight: 500;
+}
+.benefitCard p , .benefitService p{
+    color: #909090;
+    font-weight: 400;
+    font-size: larger;
 }
