--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
     </div>
       <div class="follow_us">
                 <a href="https://www.facebook.com/profile.php?id=100009430178752"  target="_blank" style="width: 100px; height: 100px;"><i class="ri-facebook-circle-fill"></i></a>
-                <a href="https://www.linkedin.com/in/yasmeen-mahmoud-653713192"  target="_blank" style="width: 100px; height: 100px;"><i class="ri-linkedin-box-line"></i></a>
+                <a href="https://www.linkedin.com/in/yasmeen-mahmoud-653713192"  target="_blank" style="width: 100px; height: 100px;"><i class="ri-linkedin-fill"></i></a>
                 <a href="#"  target="_blank" style="width: 100px; height: 100px;"><i class="ri-twitter-fill"></i></a>
     </div>
 </div>
