--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
+<div id="main-wrapper">
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<router-outlet class="allContent"></router-outlet>
 <app-footer></app-footer>
+</div>
 <!-- <app-home></app-home> -->
 <div class="error_toaster">
     <img src="../assets/imgs/close-circle-fill.svg">
